[package]
name = "trotp"
version = "0.1.1"
edition = "2021"
authors = ["Krakaw <41575888+Krakaw@users.noreply.github.com>"]
license = "MIT"
description = "TUI TOTP generator"
homepage = "https://github.com/Krakaw/totp"
repository = "https://github.com/Krakaw/totp"
readme = "README.md"
keywords = ["totp", "otp", "google-auth", "one-time-pin", "trotp"]
categories = ["command-line-utilities", "web-programming::http-server", "authentication"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "trotp"
path = "src/main.rs"

[dependencies]
totp-rs = "2.0.0"
chrono = "0.4"
data-encoding = "2.1.1"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rpassword = "7.0.0"
clap = {version = "3.1.18", features = ["derive"]}
tui = "0.18"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.25.0"
cli-clipboard = { version= "0.2.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
openssl = "0.10"
tiny_http = "0.11"
urlencoding = "2.1.0"
ctrlc = "3"
r2d2 = "0.8.8"
r2d2_sqlite = { version = "0.21.0" }
rusqlite_migration = "1.0.0"

[features]
default = ["cli-clipboard"]
