[package]
name = "trotp"
version = "1.0.2"
edition = "2021"
authors = ["Krakaw <41575888+Krakaw@users.noreply.github.com>"]
license = "MIT"
description = "TUI TOTP generator"
homepage = "https://github.com/Krakaw/totp"
repository = "https://github.com/Krakaw/totp"
readme = "README.md"
keywords = ["totp", "otp", "google-auth", "one-time-pin", "trotp"]
categories = ["command-line-utilities", "web-programming::http-server", "authentication"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "trotp"
path = "src/main.rs"

[dependencies]
totp-rs = "2.0.0"
chrono = "0.4"
data-encoding = "2.1.1"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = {version = "3.1.18", features = ["derive"]}
cli-clipboard = { version= "0.2.1", optional = true }
crossterm = "0.25.0"
ctrlc = "3"
env_logger = "0.9.0"
log = "0.4.0"
openssl = "0.10"
passwords = "3"
r2d2 = "0.8.8"
r2d2_sqlite = { version = "0.21.0" }
rpassword = "7.0.0"
rusqlite_migration = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
tiny_http = "0.11"
tui = "0.18"
urlencoding = "2.1.0"

[features]
default = ["cli-clipboard"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
