[package]
name = "trotp"
version = "1.1.6"
edition = "2021"
authors = ["Krakaw <41575888+Krakaw@users.noreply.github.com>"]
license = "MIT"
description = "TUI TOTP generator"
homepage = "https://github.com/Krakaw/totp"
repository = "https://github.com/Krakaw/totp"
readme = "README.md"
keywords = ["totp", "otp", "google-auth", "one-time-pin", "trotp"]
categories = ["command-line-utilities", "web-programming::http-server", "authentication"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "trotp"
path = "src/main.rs"

[dependencies]
# Going to version 3 broke certain OTPs it needs investigation before upgrading
totp-rs = "3.1.0"
chrono = "0.4"
data-encoding = "2.1.1"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
arboard = { version = "3.4.1", optional = true, features = ["wayland-data-control"] }
crossterm = "0.27.0"
ctrlc = "3"
env_logger = "0.11.2"
log = "0.4.22"
openssl = "0.10"
passwords = "3"
r2d2 = "0.8.8"
r2d2_sqlite = { version = "0.21.0" }
rpassword = "7.0.0"
rusqlite_migration = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
tiny_http = "0.11"
tui = "0.19.0"
urlencoding = "2.1.0"

[features]
default = ["arboard"]
clip = ["arboard"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

